# postagger.rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.cratesio.md  README.md  classes.txt
.github/: FUNDING.yml
.github/workflows/: build_linux_shared_libs.yaml
examples/c/: main.c  postagger.h
examples/java/: .gitignore  settings.gradle.kts
examples/java/app/: build.gradle.kts
examples/java/app/src/main/java/pos/tagger/: Main.java  POSTagger.java
examples/java/gradle/: libs.versions.toml
src/: lib.rs  main.rs  perceptron_tagger.rs
